src/test/rustdoc-ui/intra-link-span-ice-55723.stderr
error: unresolved link to `i`
  --> $DIR/intra-link-span-ice-55723.rs:9:10
   |
LL | /// （arr[i]）
   |           ^ the module `intra_link_span_ice_55723` contains no item named `i`
   |
note: the lint level is defined here
  --> $DIR/intra-link-span-ice-55723.rs:1:9
   |
LL | #![deny(broken_intra_doc_links)]
   |         ^^^^^^^^^^^^^^^^^^^^^^
   = help: to escape `[` and `]` characters, add '\' before them like `\[` or `\]`

error: aborting due to previous error

